<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_b"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zlotow.v.hw3.Activity_B">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:text="@string/button1"
            style="@style/ButtonStyle"
            android:id="@+id/button1" />
        <Button
            android:text="@string/button2"
            style="@style/ButtonStyle.Yellow"
            android:id="@+id/button2" />

        <Button
            android:text="@string/button3"
            style="@style/ButtonStyle.Yellow.Italic"
            android:id="@+id/button3" />
    </LinearLayout>
</RelativeLayout>
