<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_a"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zlotow.v.hw3.Activity_A">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/text_view1"
            style="@style/TextViewStyle"
            android:id="@+id/textView1" />
        <TextView
            android:text="@string/text_view2"
            style="@style/TextViewStyle.Bold"
            android:id="@+id/textView2" />
        <TextView
            android:text="@string/text_view3"
            style="@style/TextViewStyle.Bold.Grey"
            android:id="@+id/textView3"
  />
    </LinearLayout>
</RelativeLayout>
