<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_c"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zlotow.v.hw3.Activity_C">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            style="@style/EditTextStyle"
            android:text="@string/edittext1"
            android:id="@+id/EditText1" />

        <EditText
            style="@style/EditTextStyle.Brown"
            android:text="@string/edittext2"
            android:id="@+id/EditText2"
        />

        <EditText
            style="@style/EditTextStyle.Brown.Cursive"
            android:text="@string/edittext3"
            android:id="@+id/EditText3" />
    </LinearLayout>
</RelativeLayout>
